[tool.poetry]
name = "perartistor"
version = "0.1.0"
description = "A simple access token based personal artifact web storage micro service."
authors = ["Jasper Buesch"]

[tool.poetry.dependencies]
python = "^3.6"
tornado = "^6.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
